Adiciona campos de nome e imagem ao modelo de usuário e atualiza a API para suportar essas informações
- Adiciona colunas `name` e `image` à tabela `users` através de uma nova migração.
- Atualiza o controlador de registros para permitir a inclusão de `name` e `image` durante o registro do usuário.
- Implementa a funcionalidade de atualização de dados do usuário no controlador de usuários, permitindo a modificação de `name` e `image`.
- Atualiza o serializer de usuário para incluir os novos atributos.
- Ajusta a documentação Swagger para refletir as novas rotas e parâmetros da API.
